# industrial-digital-polygon-simulator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  grpc_summary.md  main.py  makefile  pyproject.toml  simulator.proto
.github/workflows/: docker.yml
application/: __init__.py  database_manager_service.py  proto_mappers.py  serve_functions.py  simulation_factory.py  simulation_service.py
domain/: __init__.py  base_serializabel.py  certification.py  consumer.py  distribution.py  equipment.py  lean_improvement.py  logist.py  metrics.py  process_graph.py  production_plan.py  reference_data.py  reporting.py  simulaton.py  supplier.py  tender.py  warehouse.py  worker.py  workplace.py
grpc_generated/: simulator_pb2.py  simulator_pb2.pyi  simulator_pb2_grpc.py
infrastructure/: __init__.py  abstract_repository.py  config.py  database.py  models.py  redis.py  repositories.py  seed_data.py
postgres_data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
postgres_data/base/16384/: 1247  1249  1259  2579  2606  2608  2610  2619  2619_fsm  2619_vm  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2703  2704  3455  3501  3502  3503  3534  pg_internal.init
postgres_data/base/5/: pg_internal.init
postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres_data/pg_stat/: pgstat.stat
protos/: simulator.proto
redis_data/: dump.rdb
tests/: conftest.py  test_base_serializable.py  test_certification.py  test_database_manager_service_integration.py  test_equipment.py  test_lean_improvement.py  test_process_graph.py  test_production_plan.py  test_redis_serializable.py  test_repositories_integration.py  test_simulation.py  test_simulation_factory_integration.py  test_simulation_parameters.py  test_simulation_service_integration.py  test_supplier.py  test_warehouse.py  test_worker.py  test_workplace.py
