[tool.poetry]
name = "simulation-grpc-service"
version = "0.1.0"
description = "gRPC Simulation Service with PostgreSQL and Redis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "application", from = "."}, {include = "infrastructure", from = "."}, {include = "domain", from = "."}, {include = "grpc_generated", from = "."}]

[project]
name = "simulation-grpc-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey",email = "gerasimovsergey2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio (>=1.76.0,<2.0.0)",
    "grpcio-tools (>=1.76.0,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "testcontainers (>=4.11.0,<5.0.0)",
    "greenlet (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]

log_level = "DEBUG"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s:%(lineno)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "logs/test.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(name)s:%(lineno)s %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

markers = [
    "smoke: smoke tests",
    "integration: integration tests",
    "database: tests that require database",
    "critical: critical tests that must pass",
    "timeout: tests with timeout",
]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.core.waiting_utils",
    "ignore:Flushing object.*incompatible polymorphic identity.*logist.*:sqlalchemy.exc.SAWarning",
]